settings and layout updates
zen mode removed/refactored as default with simplified layout and flatter HTML; settings button removed; 1s transition for seconds; now-defunct Sass constants removed

--- a/src/js/components/app/app.scss
+++ b/src/js/components/app/app.scss
@@ -6,27 +6,15 @@
   display: grid;
   font-family: 'Avenir Variable', sans-serif;
   font-variation-settings: 'wght' 500;
-  grid:
-    '.' minmax(#{const.$app-gap-min}, #{const.$app-gap-max})
-    'faces'
-    'settings' minmax(#{const.$app-gap-min}, #{const.$app-gap-max}) / 1fr;
-  place-items: center;
+  place-content: center;
   
   @supports (block-size: 100dvh) {
     block-size: 100dvh;
   }
 }
 
-clock-faces {
-  grid-area: faces;
-
-  &[seconds] {
-    --seconds-opacity: 1;
-  }
-}
-
-clock-settings {
-  grid-area: settings;
+clock-faces[seconds] {
+  --seconds-opacity: 1;
 }
 
 // Hands colors don't change between light and dark mode, but second hands
