--- a/src/js/components/settings/settings.scss
+++ b/src/js/components/settings/settings.scss
@@ -18,19 +18,25 @@ $toggle-size: 1.25rem;
 dialog {
   backdrop-filter: blur(6px);
   background-color: var(--dialog-surface);
-  border: 0;
+  border: 1px solid var(--on-surface-variant);
   border-radius: 1.5rem;
   padding: 0;
-  transition: utils.transition(transform);
+  transition: utils.transition(opacity, transform);
 
-  &[aria-disabled='true'] {
+  &[inert] {
     opacity: 0;
-    transform: scale(.25);
+    pointer-events: none;
+    transform: scale(.5);
   }
 
   &::backdrop {
-    background: 0;
+    background-color: transparent;
   }
+}
+
+// Prevent background content from scrolling when dialog is open.
+html:has(dialog[open]) {
+  overflow: hidden;
 }
 
 // All settings in a standard <form> element.
@@ -54,7 +60,7 @@ ul {
   grid: auto-flow / repeat(3, 1fr);
   list-style: none;
   margin: 0;
-  padding-block: 0 $menu-padding;
+  padding-block: $menu-padding 0;
   padding-inline: $menu-padding;
   transition: utils.transition(opacity);
 
