blue outline for active toggles for better ux

--- a/src/js/components/settings/settings.scss
+++ b/src/js/components/settings/settings.scss
@@ -154,7 +154,7 @@ input[type='checkbox'] {
   overflow: hidden;
 
   &:focus {
-    border-color: var(--on-surface);
+    border-color: var(--outline);
   }
 
   &::before,
