refactors drop shadow as const instead of var
also renames --text var

--- a/src/js/components/settings/settings.scss
+++ b/src/js/components/settings/settings.scss
@@ -20,7 +20,7 @@ dialog {
   background-color: var(--background-1);
   border: 0;
   border-radius: 1rem;
-  box-shadow: var(--box-shadow-1);
+  box-shadow: const.$box-shadow-1;
   display: block; // [1]
   inset-block: auto 5dvw;
   max-inline-size: 90dvw;
@@ -102,7 +102,7 @@ input {
     transition: utils.transition(border-color);
 
     &:hover {
-      border-color: var(--text-color);
+      border-color: var(--text);
     }
   }
 
@@ -131,7 +131,7 @@ input {
 // Labels contain a <span> containing text and a checkbox.
 label {
   align-items: center;
-  color: var(--text-color);
+  color: var(--text);
   cursor: pointer;
   display: grid;
   gap: 0 1rem;
