--- a/src/styles/_const.scss
+++ b/src/styles/_const.scss
@@ -1,3 +1,6 @@
+// Drop shadows.
+$box-shadow-1: 0 1px 2px 0 rgb(black, .3), 0 1px 3px 1px rgba(black, .15);
+
 /// Color palettes via Apple Developers Human Interface Guidelines.
 /// @see https://developer.apple.com/design/human-interface-guidelines/foundations/color#specifications
 
