vars and base files wired up

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,46 +1,2 @@
-@use 'const';
-@use 'utils';
-
-@font-face {
-  font-display: swap;
-  font-family: 'Avenir Variable';
-  font-weight: 1 999;
-  src: url('https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2') format('woff2');
-}
-
-:root {
-  --box-shadow:
-      0 1px 2px 0 rgb(0, 0, 0, .3),
-      0 1px 3px 1px rgba(0, 0, 0, .15);
-  --background-0: #{utils.map-deep-get(const.$grays, 6, light)};
-  --background-1: white;
-  --background-2: #{utils.map-deep-get(const.$grays, 4, light)};
-  --outline: #{utils.map-deep-get(const.$colors, 'blue', light)};
-  --text: #{utils.map-deep-get(const.$grays, 5, dark)};
-  --transition: .25s;
-
-  @media (prefers-color-scheme: dark) {
-    --background-0: #{utils.map-deep-get(const.$grays, 6, dark)};
-    --background-1: #{utils.map-deep-get(const.$grays, 4, dark)};
-    --background-2: #{utils.map-deep-get(const.$grays, 2, dark)};
-    --outline: #{utils.map-deep-get(const.$colors, 'blue', dark)};
-    --text: #{utils.map-deep-get(const.$grays, 5, light)};
-  }
-}
-
-* {
-  box-sizing: border-box;
-}
-
-html {
-  -webkit-tap-highlight-color: transparent;
-}
-
-body {
-  background-color: var(--background-0);
-  block-size: 100dvh;
-  margin: 0;
-  overflow: hidden;
-  place-items: center;
-  touch-action: manipulation;
-}
+@use 'vars';
+@use 'base';
