--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -3,7 +3,7 @@
   --background-0: var(--gray6);
   --background-1: white;
   --background-2: var(--gray4);
-  --outline: var(--blue);
+  --outline: var(--text);
   --text: rgb(44, 44, 46); // Gray5 dark.
 
   // Apple HGI light mode colors.
@@ -38,7 +38,6 @@
     --background-0: var(--gray6);
     --background-1: var(--gray4);
     --background-2: var(--gray2);
-    --outline: var(--blue);
     --text: rgb(229, 229, 234); // Gray5 light.
 
     // Apple HGI dark mode colors.
