--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-  background-color: var(--background-0);
+  background-color: var(--fill-0);
   block-size: 100dvh;
   margin: 0;
   overflow: hidden;
