--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,5 +1,6 @@
 :root {
   // Theming.
+  --border: 1px solid var(--gray5);
   --fill-0: var(--gray6);
   --fill-1: white;
   --fill-2: var(--gray5);
