no-js layout fix; link colors; var renaming

--- a/src/js/components/faces/faces.scss
+++ b/src/js/components/faces/faces.scss
@@ -61,6 +61,10 @@ $total-cells: ($grid * $clock-cells) + $clock-cells;
   transition: background-color var(--transition);
 }
 
+:host([seconds]) {
+  --seconds-opacity: 1;
+}
+
 // Individual placement of each clock via grid-area.
 @include clock-placement($grid, $clock-cells);
 
