--- a/src/js/components/settings/settings.scss
+++ b/src/js/components/settings/settings.scss
@@ -99,7 +99,7 @@ input {
     transition: border-color var(--transition);
 
     &:hover {
-      border-color: var(--text);
+      border-color: var(--text-color);
     }
   }
 
@@ -128,7 +128,7 @@ input {
 // Labels contain a <span> containing text and a checkbox.
 label {
   align-items: center;
-  color: var(--text);
+  color: var(--text-color);
   cursor: pointer;
   display: grid;
   gap: 0 1rem;
