--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -4,8 +4,11 @@
   --fill-0: var(--gray6);
   --fill-1: white;
   --fill-2: var(--gray5);
-  --outline: var(--text);
-  --text: rgb(44, 44, 46); // Gray5 dark.
+  --link-color: var(--blue);
+  --link-focus-color: var(--orange);
+  --link-visited-color: var(--purple);
+  --outline: var(--text-color);
+  --text-color: rgb(44, 44, 46); // Gray5 dark.
 
   // Apple HGI light mode colors.
   --gray1: rgb(142, 142, 147);
@@ -36,7 +39,7 @@
     --fill-0: var(--gray6);
     --fill-1: var(--gray5);
     --fill-2: var(--gray4);
-    --text: rgb(229, 229, 234); // Gray5 light.
+    --text-color: rgb(229, 229, 234); // Gray5 light.
 
     // Apple HGI dark mode colors.
     --gray1: rgb(142, 142, 147);
