--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -4,9 +4,9 @@
   --fill-0: var(--gray6);
   --fill-1: white;
   --fill-2: var(--gray5);
-  --link-color: var(--blue);
-  --link-focus-color: var(--orange);
-  --link-visited-color: var(--purple);
+  --link-color: DodgerBlue;
+  --link-focus-color: OrangeRed;
+  --link-visited-color: RebeccaPurple;
   --outline: var(--text-color);
   --text-color: rgb(44, 44, 46); // Gray5 dark.
 
@@ -39,6 +39,9 @@
     --fill-0: var(--gray6);
     --fill-1: var(--gray5);
     --fill-2: var(--gray4);
+    --link-color: CornflowerBlue;
+    --link-focus-color: DarkOrange;
+    --link-visited-color: MediumPurple;
     --text-color: rgb(229, 229, 234); // Gray5 light.
 
     // Apple HGI dark mode colors.
