--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,12 +1,13 @@
 :root {
   // Theming.
   --border: 1px solid var(--gray5);
+  --default: white;
   --fill-0: var(--gray6);
   --fill-1: white;
   --fill-2: var(--gray5);
-  --link-color: DodgerBlue;
-  --link-focus-color: OrangeRed;
-  --link-visited-color: RebeccaPurple;
+  // --link-color: DodgerBlue;
+  // --link-focus-color: OrangeRed;
+  // --link-visited-color: RebeccaPurple;
   --outline: var(--text-color);
   --text-color: rgb(44, 44, 46); // Gray5 dark.
 
@@ -17,19 +18,67 @@
   --gray4: rgb(209, 209, 214);
   --gray5: rgb(229, 229, 234);
   --gray6: rgb(242, 242, 247);
-  --red: rgb(255, 59, 48);
-  --orange: rgb(255, 149, 0);
+  
+  /* Colors. */
+  --red: rgb(255, 56, 60);
+  --red-dark: rgb(255, 66, 69);
+  --red-contrast: rgb(233, 21, 45);  
+  --red-dark-contrast: rgb(255, 97, 101);
+
+  --orange: rgb(255, 141, 40);
+  --orange-dark: rgb(255, 146, 48);
+  --orange-contrast: rgb(197, 83, 0);
+  --orange-dark-contrast: rgb(255, 160, 86);
+
   --yellow: rgb(255, 204, 0);
+  --yellow-dark: rgb(255, 214, 0);
+  --yellow-contrast: rgb(161, 106, 0);
+  --yellow-dark-contrast: rgb(254, 223, 67);
+
   --green: rgb(52, 199, 89);
-  --mint: rgb(0, 199, 190);
-  --teal: rgb(48, 176, 199);
-  --cyan: rgb(50, 173, 230);
-  --blue: rgb(0, 122, 255);
-  --indigo: rgb(88, 86, 214);
-  --purple: rgb(175, 82, 222);
+  --green-dark: rgb(48, 209, 88);
+  --green-contrast: rgb(0, 137, 50);
+  --green-dark-contrast: rgb(74, 217, 104);
+
+  --mint: rgb(0, 200, 179);
+  --mint-dark: rgb(0, 218, 195);
+  --mint-contrast: rgb(0, 133, 117);
+  --mint-dark-contrast: rgb(84, 223, 203);
+
+  --teal: rgb(0, 195, 208);
+  --teal-dark: rgb(0, 210, 224);
+  --teal-contrast: rgb(0, 129, 152);
+  --teal-dark-contrast: rgb(59, 221, 236);
+  
+  --cyan: rgb(0, 192, 232);
+  --cyan-dark: rgb(60, 211, 254);
+  --cyan-contrast: rgb(0, 126, 174);
+  --cyan-dark-contrast: rgb(109, 217, 255);
+
+  --blue: rgb(0, 136, 255);
+  --blue-dark: rgb(0, 145, 255);
+  --blue-contrast: rgb(30, 110, 244);      
+  --blue-dark-contrast: rgb(92, 184, 255);
+  
+  --indigo: rgb(97, 85, 245);
+  --indigo-dark: rgb(109, 124, 255);
+  --indigo-contrast: rgb(86, 74, 222);  
+  --indigo-dark-contrast: rgb(167, 170, 255);
+
+  --purple: rgb(203, 48, 224);
+  --purple-dark: rgb(219, 52, 242);
+  --purple-contrast: rgb(176, 47, 194);    
+  --purple-dark-contrast: rgb(234, 141, 255);
+
   --pink: rgb(255, 45, 85);
-  --brown: rgb(162, 132, 94);
-  --default: white;
+  --pink-dark: rgb(255, 55, 95);
+  --pink-contrast: rgb(231, 18, 77);      
+  --pink-dark-contrast: rgb(255, 138, 196);
+
+  --brown: rgb(172, 127, 94);
+  --brown-dark: rgb(183, 138, 102);
+  --brown-contrast: rgb(149, 109, 81);
+  --brown-dark-contrast: rgb(219, 166, 121);
 
   // Global properties.
   --transition: .25s;
@@ -39,9 +88,9 @@
     --fill-0: var(--gray6);
     --fill-1: var(--gray5);
     --fill-2: var(--gray4);
-    --link-color: CornflowerBlue;
-    --link-focus-color: DarkOrange;
-    --link-visited-color: MediumPurple;
+    // --link-color: CornflowerBlue;
+    // --link-focus-color: DarkOrange;
+    // --link-visited-color: MediumPurple;
     --text-color: rgb(229, 229, 234); // Gray5 light.
 
     // Apple HGI dark mode colors.
@@ -51,18 +100,6 @@
     --gray4: rgb(58, 58, 60);
     --gray5: rgb(44, 44, 46);
     --gray6: rgb(28, 28, 30);
-    --red: rgb(255, 69, 58);
-    --orange: rgb(255, 159, 10);
-    --yellow: rgb(255, 214, 10);
-    --green: rgb(48, 209, 88);
-    --mint: rgb(102, 212, 207);
-    --teal: rgb(64, 200, 224);
-    --cyan: rgb(100, 210, 255);
-    --blue: rgb(10, 132, 255);
-    --indigo: rgb(94, 92, 230);
-    --purple: rgb(191, 90, 242);
-    --pink: rgb(255, 55, 95);
-    --brown: rgb(172, 142, 104);
     --default: black;
   }
 }
